--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +32,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="modal"></div>
+  <div id="modal">
+    
+  </div>
   <div id="root"></div>
   <!--
       This HTML file is a template.
